[gd_scene load_steps=5 format=3 uid="uid://cn2mf7pug144t"]

[ext_resource type="PackedScene" uid="uid://cmc8gamtwvo13" path="res://Nodes/Characters/Player.tscn" id="1_0pv22"]
[ext_resource type="Script" path="res://Scripts/test.gd" id="1_gw8np"]
[ext_resource type="PackedScene" uid="uid://dbic7grktkmdx" path="res://Nodes/Objects/Bullet.tscn" id="2_bgrbo"]

[sub_resource type="Curve2D" id="Curve2D_ebbs7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 192, 0, 0, 0, 0, 0, 384, 0, 0, 0, 0, 0, 384, 216, 0, 0, 0, 0, 192, 216, 0, 0, 0, 0, 192, 0)
}
point_count = 5

[node name="Test" type="Node"]
script = ExtResource("1_gw8np")
bullet_scene = ExtResource("2_bgrbo")

[node name="Player" parent="." instance=ExtResource("1_0pv22")]
position = Vector2(31, 39)

[node name="BulletPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ebbs7")

[node name="BulletSpawnLocation" type="PathFollow2D" parent="BulletPath"]
position = Vector2(192, 0)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
